fixed hamburger on mobile

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -11,6 +11,7 @@ $secondary-500: #ffc132;
 
 $gradient-yellowRed: linear-gradient(90deg, #ff616a 0%, #ffc837 100%);
 
-$phone: 480px;
+// $phone: 480px;
+$phone: 250px;
 $tablet: 768px;
 $desktop: 1060px;
